[gd_scene load_steps=8 format=3 uid="uid://crnlry2m7syq8"]

[ext_resource type="Script" path="res://scripts/ingredient_spawner.gd" id="1_kd8nv"]
[ext_resource type="Texture2D" uid="uid://cnxty5krdxpst" path="res://assets/images/table.png" id="2_cepn8"]
[ext_resource type="Script" path="res://scripts/left_queue.gd" id="2_oweac"]
[ext_resource type="Script" path="res://scripts/right_queue.gd" id="3_ovcj2"]
[ext_resource type="Texture2D" uid="uid://dhg2jsqdhcl3l" path="res://assets/images/hanker.png" id="3_p56e6"]
[ext_resource type="AudioStream" uid="uid://0y4gn52gly50" path="res://assets/sounds/wet-slap-short.mp3" id="4_1e5k1"]
[ext_resource type="AudioStream" uid="uid://b74e0xmi20kp5" path="res://assets/sounds/rake-woosh.mp3" id="5_38f6i"]

[node name="IngredientSpawner" type="Node2D"]
script = ExtResource("1_kd8nv")

[node name="Table" type="TextureRect" parent="."]
offset_left = -90.0
offset_top = 414.0
offset_right = 1073.0
offset_bottom = 762.0
texture = ExtResource("2_cepn8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(499, 508)
texture = ExtResource("3_p56e6")

[node name="LeftQueue" type="Node2D" parent="."]
script = ExtResource("2_oweac")

[node name="RightQueue" type="Node2D" parent="."]
script = ExtResource("3_ovcj2")

[node name="StackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1e5k1")

[node name="DiscardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_38f6i")
volume_db = -20.0
